# TicTacToe

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ticTacToe/: CMakeLists.txt  main.cpp
src/ticTacToeLib/: CMakeLists.txt  base5.cpp  board.cpp  color.cpp  field.cpp  lib.cpp
src/ticTacToeLib/include/ticTacToe3D/: base5.h  base5x3.h  board.h  color.h  field.h  lib.h  uint8x3.h
src/ticTacToeTest/: CMakeLists.txt  board_num_encode.cpp  board_test.cpp  color_test.cpp  field_test.cpp  lib_test.cpp
src/utils/: CMakeLists.txt  getopt.cpp  lib.cpp  string.cpp  tokens.cpp
src/utils/include/utils/: getopt.h  lib.h  string.h  tokens.h
